# sunstrider-legacy

./: .gitattributes  .gitignore  .hgignore  .travis.yml  CMakeLists.txt  INSTALL.linux  INSTALL.windows  README.AHBOT  README.md  issue_template.md  pull_request_template.md  revision.h.in.cmake  revision_data.h.in.cmake
dep/: CMakeLists.txt
dep/ACE_wrappers/ace/: OS_NS_string.inl
dep/SFMT/: SFMT.h
dep/boost/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/catch/: CMakeLists.txt  catch.1.5.6_sun.hpp  catch.hpp
dep/cppformat/: format.cc  format.h
dep/efsw/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/g3dlite/source/: Any.cpp  FileSystem.cpp  Matrix4.cpp  System.cpp  prompt.cpp  stringutils.cpp
dep/gperftools/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt  gsoap.stub  soapC.cpp  soapH.h  soapServer.cpp  soapStub.h  stdsoap2.cpp  stdsoap2.h  tc_upgrades.txt
dep/include/SFMT/: SFMT.h  randomc.h
dep/include/mersennetwister/: MersenneTwister.h
dep/include/mysql/: mysql_version.h  mysqld_ername.h  mysqld_error.h  sql_state.h
dep/include/sockets/: StdLog.h  StdoutLog.h
dep/include/zthread/: Guard.h  LockedQueue.h
dep/lib/win32_release/: ACE.lib  libmySQL.lib  libmySQL.txt
dep/lib/x64_release/: libircclient.lib  libircclient.txt
dep/libircclient/: Changelog  Makefile  build-release.sh  config.status  configure  configure.in
dep/libircclient/PaxHeaders.13636/: Changelog  Doxyfile  LICENSE  Makefile  README  THANKS  build-release.sh  cocoa  configure  configure.in  doc  examples  include  man  src
dep/libircclient/doc/: conf.py
dep/libircclient/include/: libircclient.h
dep/libircclient/man/: libircclient.1
dep/libircclient/src/: Makefile  Makefile.in  config.h  dcc.c  libircclient.c  params.h  portable.c  ssl.c  utils.c
dep/libmpq/: CMakeLists.txt
dep/libmpq/libmpq/: mpq.c
dep/mersennetwister/: CMakeLists.txt  MersenneTwister.h
dep/mysql/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt  Readme.txt  recast_hotfix1.diff  recast_hotfix2.diff
dep/recastnavigation/Detour/: CMakeLists.txt  DetourCommon.h  DetourNavMesh.cpp  DetourNavMesh.h  DetourNavMeshQuery.cpp  DetourNavMeshQuery.h  DetourNode.cpp  DetourNode.h
dep/recastnavigation/Recast/: CMakeLists.txt  Recast.cpp  Recast.h  RecastContour.cpp  RecastLayers.cpp  RecastMesh.cpp  RecastMeshDetail.cpp  RecastRegion.cpp
dep/segvcatch/: CMakeLists.txt  x86_64-signal.h
dep/sockets_deleteme/: CMakeLists.txt  StdoutLog.cpp
dep/src/: CMakeLists.txt
dep/src/g3dlite/: CMakeLists.txt  System.cpp
dep/src/sockets/: SocketHandler.cpp  TcpSocket.cpp
dep/src/zthread/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
src/: CMakeLists.txt  malloc.c
src/authserver/: AuthSocket.cpp  CMakeLists.txt  Main.cpp  RealmList.cpp  authserver.conf.dist  authserver.rc  resource.h
src/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h  TOTP.cpp  TOTP.h
src/authserver/Realms/: RealmList.cpp  RealmList.h
src/authserver/Server/: AuthSession.cpp  AuthSession.h  AuthSocketMgr.h
src/bindings/interface/: ScriptMgr.cpp  ScriptMgr.h
src/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h
src/common/: Banner.cpp  CMakeLists.txt  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h  PhaseMask.h  WaterDefines.h
src/framework/: CMakeLists.txt
src/game/: AOEAI.cpp  AOEAI.h  AccountMgr.cpp  AccountMgr.h  AddonHandler.cpp  AddonHandler.h  AggressorAI.cpp  AggressorAI.h  ArcherAI.cpp  ArcherAI.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  AuthHandler.cpp  Bag.cpp  Bag.h  BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRL.cpp  BattleGroundRL.h  (+302 more)
src/genrev/: CMakeLists.txt
src/irc/: CMakeLists.txt  IRCMgr.cpp  IRCMgr.h
src/malloc/: CMakeLists.txt  rb.h
src/playerbot/: AiFactory.cpp  CMakeLists.txt  ChatFilter.cpp  ChatFilter.h  ChatHelper.cpp  ChatHelper.h  FleeManager.cpp  GuildTaskMgr.cpp  GuildTaskMgr.h  Helpers.cpp  LootObjectStack.cpp  LootObjectStack.h  PlayerbotAI.cpp  PlayerbotAI.h  PlayerbotAIBase.cpp  PlayerbotAIConfig.cpp  PlayerbotAIConfig.h  PlayerbotCommandServer.cpp  PlayerbotFactory.cpp  PlayerbotMgr.cpp  PlayerbotMgr.h  PlayerbotSecurity.cpp  PlayerbotSecurity.h  RandomItemMgr.cpp  RandomItemMgr.h  RandomPlayerbotFactory.cpp  RandomPlayerbotFactory.h  RandomPlayerbotMgr.cpp  RandomPlayerbotMgr.h
src/server/: CMakeLists.txt
src/shared/: ByteBuffer.h  CMakeLists.txt  Common.cpp  Common.h  Define.h  Errors.h  Log.cpp  Log.h  Memory.h  Mthread.cpp  Profiler.cpp  Profiler.h  ProfilerMgr.cpp  ProfilerMgr.h  ProgressBar.h  SystemConfig.h  Timer.h  Util.cpp  Util.h  WorldPacket.h  revision.h
src/testing/: CMakeLists.txt  UnitaryTestMgr.cpp  UnitaryTestMgr.h  UnitaryTest_Misc.cpp  UnitaryTest_Misc.h  catch_config_runner.cpp  test.cpp  test.h  test_auras.cpp  test_talent_priest.cpp  test_utils.cpp
src/tools/: CMakeLists.txt
src/trinitycore/: CMakeLists.txt  CliRunnable.cpp  Main.cpp  Master.cpp  RASocket.cpp  TrinityCore.rc  WorldRunnable.cpp  trinitycore.conf.dist
src/trinityirc/: CMakeLists.txt  ChannelMgr.cpp  Config.cpp  IRC.cpp  IRC.h  IRC_ChatHandler.cpp  IRC_ChatHandler.h  In_CTCP.cpp  In_RFC.cpp  In_STR.cpp  Message.h  Output.cpp  Socket.cpp  Socket.h  UserOperations.cpp
src/trinityrealm/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  CMakeLists.txt  Main.cpp  RealmList.cpp  RealmList.h
src/worldserver/: CMakeLists.txt  CliRunnable.cpp  Main.cpp  Master.cpp  RASocket.cpp  WorldRunnable.cpp  worldserver.conf.dist  worldserver.rc
src/wrchat/: CMakeLists.txt  IRCMgr.cpp  IRCMgr.h
(+3274 files in other folders)
