add_subdirectory(boost)
add_subdirectory(catch)
add_subdirectory(cppformat)
add_subdirectory(efsw)
add_subdirectory(g3dlite)
add_subdirectory(gsoap)
add_subdirectory(lib)
add_subdirectory(mersennetwister)
add_subdirectory(mysql)
add_subdirectory(openssl)
add_subdirectory(process)
add_subdirectory(readline)
add_subdirectory(recastnavigation)
add_subdirectory(SFMT)
add_subdirectory(threads)
add_subdirectory(utf8cpp)
add_subdirectory(zlib)

if(TOOLS)
    add_subdirectory(bzip2)
    add_subdirectory(libmpq)
endif()

add_subdirectory(segvcatch)
