#silence warnings for dependencies
if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
  string(REGEX REPLACE "/W[0-4] " "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  string(REGEX REPLACE "/W[0-4] " "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
  add_definitions(/W0)
else()
  add_definitions(-w)
endif()

add_subdirectory(boost)
add_subdirectory(efsw)
add_subdirectory(g3dlite)
if(USE_GPERFTOOLS)
	add_subdirectory(gperftools)
endif()
add_subdirectory(fmt)
add_subdirectory(gsoap)
add_subdirectory(mersennetwister)
add_subdirectory(mysql)
add_subdirectory(openssl)
add_subdirectory(process)
add_subdirectory(readline)
add_subdirectory(recastnavigation)
add_subdirectory(SFMT)
add_subdirectory(threads)
add_subdirectory(utf8cpp)
add_subdirectory(zlib)

if(TOOLS)
    add_subdirectory(bzip2)
    add_subdirectory(libmpq)
endif()