add_subdirectory(authserver)
add_subdirectory(collision)
add_subdirectory(framework)
add_subdirectory(game)
add_subdirectory(genrev)
add_subdirectory(irc)
add_subdirectory(malloc)
IF(PLAYERBOT)	
add_subdirectory(playerbot)
ENDIF()
add_subdirectory(scripts)
add_subdirectory(shared)
add_subdirectory(tools)
add_subdirectory(worldserver)